# Verif_cpp

./: .gitignore  CMakeLists.txt  README  TODO  config.h.cmake
.cmake/Modules/: FindIOGadget.cmake
Plugins/gadget/: plugins_gadget.cpp  plugins_gadget.hpp
Plugins/hdf5/: hdf5.cpp  hdf5.hpp
Plugins/old_gadget/: gadget.cpp  gadget.hpp
include/: utils.hpp
include/cfg/: config.hpp
include/cli/: converter.hpp  option.hpp  optionparser.hpp  types.hpp
include/io/: exception.hpp  hdf5.hpp  reader.hpp  reader_interface.hpp  types.hpp  writer.hpp
include/log/: logger.hpp
include/physics/: aniso.hpp  density.hpp  energy.hpp  histogramme.hpp  physics.hpp  temperature.hpp
include/plugins/: Plugins.hpp  exceptions.hpp
include/tree/: calculus.hpp  densitycenter.hpp  physics.hpp  potential.hpp  tree.hpp  utils.hpp
share/verif/: config.yaml
src/: CMakeLists.txt  main.cpp  utils.cpp
src/cfg/: config.cpp
src/cli/: option.cpp  optionparser.cpp
src/io/: CMakeLists.txt  exception.cpp  hdf5.cpp  reader.cpp  reader_interface.cpp  types.cpp  writer.cpp
src/log/: CMakeLists.txt  logger.cpp
src/physics/: CMakeLists.txt  aniso.cpp  density.cpp  energy.cpp  histogramme.cpp  temperature.cpp
src/plugins/: CMakeLists.txt  Plugins.cpp  exceptions.cpp
src/test/: CMakeLists.txt  gadget_io.cpp  test_build.cpp  test_dc.cpp  test_pot.cpp
src/tree/: CMakeLists.txt  calculus.cpp  densitycenter.cpp  potential.cpp  tree.cpp  utils.cpp
test_yaml/: yaml.cpp
